增加滚动时背景（1080P下适配）；增加声音、图标

--- a/Atack.RollCaller/Atack.RollCaller.csproj
+++ b/Atack.RollCaller/Atack.RollCaller.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>随机点名</AssemblyName>
+    <ApplicationIcon>Resources\Health.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
